--- a/headerstyle.css
+++ b/headerstyle.css
@@ -25,12 +25,18 @@ body
    
 
 
-
    
 }
-.main_buttons
+.bien
 {
-  
+
+
+    font-size : 12px;
+    font-family: trajan;
+
+}
+.main_buttons
+{: 
 
 
 }
