--- a/headerstyle.css
+++ b/headerstyle.css
@@ -16,6 +16,19 @@ body
     
 }
 
+
+a.bouton {
+ /** Ces directives indiquent au lien de ressembler à un bouton pour les principaux moteurs de rendu **/
+ -webkit-appearance: button;
+ -moz-appearance: button;
+ appearance: button;
+ /**Les directives en dessous enlèvent l'apparence par défaut en bleu et avec du texte souligné pour un lien hypertexte **/
+ text-decoration: none;
+ color: initial;
+}
+
+
+
 #web_site_name
 {
    font-family: times new roman;
@@ -31,10 +44,13 @@ body
 {
 
 
-    font-size : 12px;
+    font-size : 8px;
     font-family: trajan;
 
 }
+
+
+
 .main_buttons
 {: 
 
